--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "cytoscape": "^3.33.1",
+    "lucide-react": "^0.575.0",
     "motion": "^12.34.2",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
