feat: 服务器端沙箱执行环境 — Shell/文件/Python/网页抓取
- 新增 sandbox_service.py 沙箱引擎（命令黑名单、路径遍历防护、超时控制、输出截断）
- 新增 sandbox.py 7 个 API 端点（shell/files/python/web-fetch）
- seed.py 注册 7 个沙箱 BotTool，pipeline 工具循环自动调度
- bot_tools.py EXCLUDED_PREFIXES 排除 /sandbox 防止 sync 覆盖
- system_prompt_service.py GUIDELINES 更新沙箱使用规则
- Dockerfile 安装 jq/wget/git/tree CLI 工具，创建 /app/workspace
- docker-compose.yml 新增 workspace volume

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /build
 # Use Alibaba Cloud mirror for faster apt downloads
 RUN sed -i 's|deb.debian.org|mirrors.aliyun.com|g' /etc/apt/sources.list.d/debian.sources \
     && apt-get update && apt-get install -y --no-install-recommends \
-    build-essential curl unzip \
+    build-essential curl unzip jq wget git tree \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Deno
@@ -28,7 +28,7 @@ COPY --from=builder /usr/local/bin /usr/local/bin
 # Copy app source
 COPY . .
 
-RUN mkdir -p /app/uploads /app/skills
+RUN mkdir -p /app/uploads /app/skills /app/workspace
 
 ENV SKILLS_DIR=/app/skills
 
