--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
     volumes:
       - uploads:/app/uploads
       - ./skills:/app/skills
+      - workspace:/app/workspace
     depends_on:
       postgres:
         condition: service_healthy
@@ -74,3 +75,4 @@ services:
 volumes:
   pgdata:
   uploads:
+  workspace:
