--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
     "pyyaml>=6.0",
     "python-dotenv>=1.0.0",
     "httpx>=0.27.0",
-    "trafilatura>=1.12.0",
+    "beautifulsoup4>=4.12.0",
     "sse-starlette>=2.0.0",
     "pgvector>=0.3.0",
     "croniter>=2.0.5",
