--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "httpx>=0.27.0",
     "beautifulsoup4>=4.12.0",
+    "html2text>=2024.2.26",
     "sse-starlette>=2.0.0",
     "pgvector>=0.3.0",
     "croniter>=2.0.5",
